# NetSleuth

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: demo.sh  learning-with-netsleuth.md
lab/: README.md  docker-compose.yml  generate_samples.py
netsleuth/: __init__.py  __main__.py  alerts.py  analyzer.py  cli.py  cve.py  defense.py  diff.py  discovery.py  geoip.py  pcap.py  privileges.py  reporter.py  samples.py  scanner.py  sniffer.py  store.py  ui.py  web.py
netsleuth/web/static/: app.js  style.css
netsleuth/web/templates/: dashboard.html
templates/: report.html
tests/: test_alerts.py  test_analyzer.py  test_cli.py  test_cve.py  test_defense.py  test_diff.py  test_discovery.py  test_geoip.py  test_nmap_parity.py  test_pcap.py  test_privileges.py  test_reporter.py  test_scanner.py  test_sniffer.py  test_store.py  test_stream.py  test_ui.py  test_web.py
