[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "netsleuth"
version = "0.1.0"
description = "Defensive, educational network port scanner + packet sniffer. Authorized use only."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]

[project.scripts]
netsleuth = "main:main"

[tool.setuptools]
packages = ["netsleuth"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can import the top-level main.py
# (the editable install only exposes the netsleuth package).
pythonpath = ["."]
# scapy 2.7 deprecated direct DNS qd/an/ns/ar access; the API still works and
# our decoder tolerates it. Silence only that third-party warning.
filterwarnings = [
    "ignore:The DNS fields.*:DeprecationWarning:scapy",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

# scapy ships no type stubs and populates scapy.all (IP, TCP, sr1, ...)
# dynamically at runtime, so static analysis can't see those names. Skip it
# rather than littering the source with per-line ignores.
[[tool.mypy.overrides]]
module = "scapy.*"
ignore_missing_imports = true
follow_imports = "skip"
