[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "netsleuth"
version = "0.1.0"
description = "Defensive, educational network port scanner + packet sniffer. Authorized use only."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5",
    "rich>=13.0",
    "jinja2>=3.1",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]
geoip = ["geoip2>=4"]

[project.scripts]
netsleuth = "netsleuth.cli:main"
netsleuth-web = "netsleuth.web:run"

[tool.setuptools]
packages = ["netsleuth"]

[tool.setuptools.package-data]
netsleuth = ["web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
# Repo root on sys.path so the top-level main.py shim is importable in tests.
pythonpath = ["."]
# scapy 2.7 deprecated direct DNS qd/an/ns/ar access; the API still works and
# our decoder tolerates it. Silence only that third-party warning.
filterwarnings = [
    "ignore:The DNS fields.*:DeprecationWarning:scapy",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

# scapy ships no type stubs and populates scapy.all (IP, TCP, sr1, ...)
# dynamically at runtime, so static analysis can't see those names. Skip it
# rather than littering the source with per-line ignores.
[[tool.mypy.overrides]]
module = "scapy.*"
ignore_missing_imports = true
follow_imports = "skip"

# geoip2 is an optional dependency (the GeoIP extra) and may not be installed.
[[tool.mypy.overrides]]
module = "geoip2.*"
ignore_missing_imports = true
